[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "isaac-cloud"
version = "0.1.0"
description = "CLI for provisioning TensorDock GPU instances for NVIDIA Isaac Sim"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<0.29",
  "typer>=0.12,<0.17",
]
